# fastapi-tortoise-template

./: .env.example  .gitignore  Makefile  README.md  cli.py  cookiecutter.json  docker-compose.yml  pyproject.toml
app/: main.py
app/api/errors/: validation_error.py
app/api/routes/v1/: router.py
app/core/: events.py  settings.py
app/db/: setup.py
app/db/models/: __init__.py  example.py
app/services/: example_service.py
{{cookiecutter.project_name}}/: .env  Dockerfile  docker-compose.yml
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/api/routes/: router.py
{{cookiecutter.project_name}}/app/api/routes/v1/: example_routes.py
{{cookiecutter.project_name}}/app/core/: __init__.py  settings.py
{{cookiecutter.project_name}}/app/db/: setup.py
{{cookiecutter.project_name}}/app/db/models/: __init__.py
{{cookiecutter.project_name}}/app/schemas/: example_schema.py
